/**
 *  Copyright The WildFly Authors
 *  SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.wildfly.extension.grpc.example2.chat2";
import "chatmessage.proto";

package chat2;

service ChatService2 {
  rpc chat(stream chatmessages.ChatMessage) returns (stream chatmessages.ChatMessage);
}