/**
 *  Copyright The WildFly Authors
 *  SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "chatmessages";
option java_outer_classname = "ChatMessageProto";

package chatmessages;

message ChatMessage {
  string message = 1;
}
